Edited arsenal scores

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           reviews perfect for any developers who are serious about honing their
           skill
         </p>
+        <p>
+          Arsenal 3-2 Liverpol
+        </p>
       </div>
       <div class="box2">
         <h1 class="h2-2">Monthly subscription</h1>
